
plugins {
    id 'java-library'
    id 'com.diffplug.spotless'
}

dependencies {
    compileOnly 'org.jspecify:jspecify:1.+'

    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testCompileOnly 'org.jspecify:jspecify:1.+'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

spotless {
    java {
        googleJavaFormat()
    }
}

classes.dependsOn 'spotlessApply'
